--- a/blogadmin/src/app/PAGES/navbar/navbar.component.css
+++ b/blogadmin/src/app/PAGES/navbar/navbar.component.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding-left: 120px;
     padding-right: 90px;
-    margin-bottom: -16px;
+    /* margin-bottom: -16px; */
     color: white;
     background: rgb(2, 24, 90);
     position: sticky;
