--- a/blogadmin/src/app/PAGES/create-post/create-post.component.css
+++ b/blogadmin/src/app/PAGES/create-post/create-post.component.css
@@ -1,3 +1,32 @@
+.prompt {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.prompt p,
+.review p {
+    font-size: 20px;
+    font-weight: bold;
+}
+
 form button {
     margin-top: 40px;
 }
+
+.review {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.divider {
+    width: 100%;
+    border: 1px groove rgb(221, 215, 215)
+}
+
+.review quill-view-html {
+    width: 100%;
+}
+
