--- a/blogadmin/src/app/PAGES/home/home.component.html
+++ b/blogadmin/src/app/PAGES/home/home.component.html
@@ -24,18 +24,20 @@
                 <button class="add-post hover" routerLink="/create-post"><mat-icon>add_circle</mat-icon>Add new post</button>
             </div>
             <ngx-masonry [options]="{ gutter: 44 }" style="width: 100%;" [ordered]="true" [ngClass]="{'intersected': intersected}">
-                <div ngxMasonryItem class="masonry-item" [prepend]="true" *ngFor="let item of blogPosts" #blogPosts>
+                <div ngxMasonryItem class="masonry-item" [prepend]="true" *ngFor="let post of blogPosts" #blogPosts>
                     <mat-card>
                         <mat-card-header>
-                            <mat-card-title>{{ item.title }}</mat-card-title>
+                            <mat-card-title>
+                                {{post.text | title}}
+                            </mat-card-title>
                         </mat-card-header>
-                        <img mat-card-image src="../../../assets/vintage.jpg">
+                        <img class="mat-image" mat-card-image src="{{post.text | image}}">
                         <mat-card-content>
-                            {{ item.description | shorten: 15 }}
+                            {{post.text | description | shorten: 20}}
                         </mat-card-content>
                         <div class="clickables-div">
                             <div class="button-div">
-                                <button class="hover">Read More<mat-icon>arrow_right_alt</mat-icon></button>
+                                <button class="hover" [routerLink]="['/read-more', post.id]">Read More<mat-icon>arrow_right_alt</mat-icon></button>
                             </div>
                             <div class="icon-div">
                                 <mat-icon class="hover">create</mat-icon>
@@ -44,7 +46,7 @@
                         </div>
                     </mat-card>
                 </div>
-            </ngx-masonry>  
+            </ngx-masonry>
         </div>
     </div>
 </div>
