--- a/blogadmin/src/app/PAGES/navbar/navbar.component.html
+++ b/blogadmin/src/app/PAGES/navbar/navbar.component.html
@@ -1,10 +1,30 @@
-<div class="navbar">
+<div class="navbar" *ngIf="innerWidth >= 573">
     <div>
-        <h3>Zoey's Blog</h3>
+        <h3>{{(blogName | async)?.blogName}}</h3>
     </div>
     <div class="pages">
         <p routerLink="/home" class="hover">Home</p>
         <p routerLink="/about" class="hover">About</p>
         <p routerLink="/settings" class="hover">Settings</p>
+        <p class="hover" (click)="logout()">Logout</p>
+    </div>
+</div>
+<div class="responsive-navbar-div" *ngIf="innerWidth <= 572">
+    <div class="responsive-navbar-second-div">
+        <div class="responsive-navbar">
+            <div>
+                <h3>{{(blogName | async)?.blogName}}</h3>
+            </div>
+            <div class="mat-icon">
+                <mat-icon *ngIf="!open" (click)="openNavbar()" class="hover">menu</mat-icon>
+                <mat-icon *ngIf="open" (click)="openNavbar()" class="hover">clear</mat-icon>
+            </div>
+        </div>
+        <div class="links-shown" *ngIf="open">
+            <p routerLink="/home" class="hover">Home</p>
+            <p routerLink="/about" class="hover">About</p>
+            <p routerLink="/settings" class="hover">Settings</p>
+            <p class="hover" (click)="logout()">Logout</p>
+        </div>
     </div>
 </div>
