--- a/blogadmin/src/app/PAGES/about/about.component.html
+++ b/blogadmin/src/app/PAGES/about/about.component.html
@@ -1,5 +1,12 @@
-<div>
+<div class="container">
     <app-navbar></app-navbar>
-    
+    <div class="main-div">
+        <p>About the author</p>
+        <div class="last-div">
+            <img src="{{aboutImageUrl | async}}">
+            <p>{{aboutText}}</p>
+        </div>   
+    </div>
 </div>
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
 
