--- a/blogadmin/src/app/PAGES/create-post/create-post.component.css
+++ b/blogadmin/src/app/PAGES/create-post/create-post.component.css
@@ -7,11 +7,13 @@
 .prompt p,
 .review p {
     font-size: 20px;
+    padding: 20px 0;
     font-weight: bold;
 }
 
 form button {
     margin-top: 40px;
+    margin-left: 18px;
 }
 
 .review {
@@ -28,5 +30,24 @@ form button {
 
 .review quill-view-html {
     width: 100%;
+}
+
+@media (max-width: 768px) {
+    form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    form button {
+        width: 50px;
+        height: 30px;
+        font-size: 12px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
 }
 
