--- a/blogadmin/src/app/PAGES/home/home.component.css
+++ b/blogadmin/src/app/PAGES/home/home.component.css
@@ -1,17 +1,13 @@
 .main-div{
-    margin-top: -16px;
     height: 100%;
     width: 100%;
-    /* margin-top: 62px; */
-    /* background: blue; */
 }
 
 .area{
-    background: rgb(2, 24, 90);  
-    /* background: linear-gradient(to left, #e02828, maroon); */
     width: 100%;
-    height: 520px;
+    height: 540px;
     position: relative;
+    background-size: 100% 100%;
    
 }
 
@@ -19,10 +15,9 @@
     color: white;
     position: absolute;
     left: 50%;
-    top: 35%;
+    top: 40%;
     font-size: 45px;
     transform: translate(-50%, 0);
-    /* z-index: 1; */
 }
 
 
@@ -146,7 +141,7 @@
     padding-top: 90px;
     padding-left: 50px;
     padding-right: 50px;
-    background: #E3E1DC;
+    background:  #f0eeea;
 
 }
 
@@ -217,6 +212,7 @@ mat-card-content {
 mat-card button {
     display: flex;
     align-items: center;
+    padding-inline: 5px;
     background: inherit;
     color: rgb(2, 24, 90);
     border:  2px solid rgb(2, 24, 90);
@@ -271,6 +267,10 @@ mat-card button {
     .recent-posts {
         flex-direction: column;
         font-size: 16px;
+    }
+
+    .add-post {
+        margin-top: 15px;
     }
 
     .masonry-item {
