--- a/blogadmin/src/app/PAGES/read-more/read-more.component.html
+++ b/blogadmin/src/app/PAGES/read-more/read-more.component.html
@@ -1,4 +1,5 @@
-<div>
+<div class="container">
     <app-navbar></app-navbar>
-    <quill-view-html [content]="post.text" theme="snow"></quill-view-html>
+    <quill-view-html [content]="post" theme="snow" *ngIf="post"></quill-view-html>
 </div>
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
