--- a/blogadmin/src/styles.css
+++ b/blogadmin/src/styles.css
@@ -1,25 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap');
 
-body, html {
-    margin: 0;
-    padding: 0;
+body,
+html {
     height: 100%;
     width: 100%;
-    overflow-x: hidden;
-
 }
 
 * {
     font-family: 'Noto Sans';
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 .hover {
     cursor: pointer;
 }
-
-mat-content {
-    font-size: 20px;
-}
-
