--- a/blogadmin/src/app/PAGES/about/about.component.html
+++ b/blogadmin/src/app/PAGES/about/about.component.html
@@ -1,11 +1,9 @@
 <div class="container">
     <app-navbar></app-navbar>
     <div class="main-div">
-        <p>About the author</p>
-        <div class="last-div">
-            <img src="{{aboutImageUrl | async}}">
-            <p>{{aboutText}}</p>
-        </div>   
+        <p class="main-p">About the author</p>
+        <img src="{{aboutImageUrl | async}}">
+        <p class="last-p">{{aboutText}}</p> 
     </div>
 </div>
 <ngx-spinner type="ball-scale-multiple"></ngx-spinner>
