--- a/blogadmin/src/app/PAGES/edit-post/edit-post.component.html
+++ b/blogadmin/src/app/PAGES/edit-post/edit-post.component.html
@@ -14,3 +14,4 @@
 
 <quill-view-html [content]="post" theme="snow" *ngIf="post && post !== ''"></quill-view-html>
 <h2 *ngIf="post == ''">Please refresh and go back</h2>
+<ngx-ui-loader fgsColor="#fff"></ngx-ui-loader>
