--- a/blogadmin/src/app/PAGES/read-more/read-more.component.html
+++ b/blogadmin/src/app/PAGES/read-more/read-more.component.html
@@ -2,3 +2,4 @@
     <app-navbar></app-navbar>
     <quill-view-html [content]="post" theme="snow" *ngIf="post"></quill-view-html>
 </div>
+<ngx-ui-loader fgsColor="#fff"></ngx-ui-loader>
