--- a/blogUser/src/app/PAGES/about/about.component.html
+++ b/blogUser/src/app/PAGES/about/about.component.html
@@ -9,5 +9,5 @@
     </div>
     <app-footer></app-footer>
 </div>
-<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
+<ngx-ui-loader fgsColor="#fff"></ngx-ui-loader>
 
