--- a/blogUser/src/app/PAGES/home/home.component.html
+++ b/blogUser/src/app/PAGES/home/home.component.html
@@ -47,4 +47,4 @@
     </div>
     <app-footer></app-footer>
 </div>
-<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
+<ngx-ui-loader fgsColor="#fff"></ngx-ui-loader>
