--- a/blogUser/src/app/PAGES/read-more/read-more.component.html
+++ b/blogUser/src/app/PAGES/read-more/read-more.component.html
@@ -3,4 +3,4 @@
     <quill-view-html [content]="post" theme="snow" *ngIf="post"></quill-view-html>
 </div>
 <app-footer></app-footer>
-<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
+<ngx-ui-loader fgsColor="#fff"></ngx-ui-loader>
