--- a/blogadmin/src/app/PAGES/navbar/navbar.component.css
+++ b/blogadmin/src/app/PAGES/navbar/navbar.component.css
@@ -55,7 +55,8 @@
     padding-left: 30px;
     position: absolute;
     /* background: rgb(61, 2, 61); */
-    background: rgb(179, 49, 2);
+    /* background: rgb(179, 49, 2); */
+    background: rgb(44, 75, 167);
     color: white;
     animation: shown 0.2s ease-in;
 }
