--- a/blogUser/src/app/PAGES/footer/footer.component.css
+++ b/blogUser/src/app/PAGES/footer/footer.component.css
@@ -1,7 +1,10 @@
 .container {
     height: 100px;
     width: 100%;
-    /* margin-top: 50px; */
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background: rgb(2, 24, 90);
     color: white;
     display: flex;
