--- a/blogUser/src/app/PAGES/about/about.component.html
+++ b/blogUser/src/app/PAGES/about/about.component.html
@@ -1,13 +1,10 @@
 <div class="container">
     <app-navbar></app-navbar>
     <div class="main-div">
-        <p>About the author</p>
-        <div class="last-div">
-            <img src="{{aboutImageUrl | async}}">
-            <p>{{aboutText}}</p>
-        </div>   
+        <p class="main-p">About the author</p>
+        <img src="{{aboutImageUrl | async}}">
+        <p class="last-p">{{aboutText}}</p> 
     </div>
-    <app-footer></app-footer>
 </div>
 <ngx-ui-loader fgsColor="#fff"></ngx-ui-loader>
 
