--- a/blogUser/src/app/PAGES/about/about.component.html
+++ b/blogUser/src/app/PAGES/about/about.component.html
@@ -6,5 +6,7 @@
         <p class="last-p">{{aboutText}}</p> 
     </div>
 </div>
+<app-footer></app-footer>
 <ngx-ui-loader fgsColor="#fff"></ngx-ui-loader>
+
 
