--- a/blogUser/src/app/PAGES/navbar/navbar.component.css
+++ b/blogUser/src/app/PAGES/navbar/navbar.component.css
@@ -57,6 +57,7 @@
     width: 100%;
     padding-left: 30px;
     position: absolute;
+    padding-block: 5px;
     /* background: rgb(61, 2, 61); */
     background: rgb(3, 26, 95);
     color: white;
