--- a/blogUser/src/app/PAGES/footer/footer.component.css
+++ b/blogUser/src/app/PAGES/footer/footer.component.css
@@ -4,7 +4,8 @@
     background: rgb(2, 24, 90);
     color: white;
     display: flex;
-    padding-inline: 80px;
+    padding-left: 80px;
+    padding-right: 80px;
     align-items: center;
     justify-content: space-between;
 }
@@ -25,12 +26,14 @@ fa-icon {
 }
 
 .contact fa-icon {
-    padding-inline: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 @media (max-width: 767px) {
     .container {
-        padding-inline: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
         font-size: 11px;
     }
 
@@ -39,7 +42,8 @@ fa-icon {
     }
 
     .contact fa-icon {
-        padding-inline: 2px;
+        padding-right: 2px;
+        padding-left: 2px;
     }
 
 }
