--- a/blogUser/src/app/PAGES/home/home.component.css
+++ b/blogUser/src/app/PAGES/home/home.component.css
@@ -195,7 +195,8 @@ mat-card-content {
 mat-card button {
     display: flex;
     align-items: center;
-    padding-inline: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
     background: inherit;
     color: rgb(2, 24, 90);
     border:  2px solid rgb(2, 24, 90);
