--- a/blogUser/src/app/PAGES/footer/footer.component.html
+++ b/blogUser/src/app/PAGES/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div>
         <h2>{{(blogName | async)?.blogName}}</h2>
     </div>
-    <div>
+    <div class="copyright">
         <p><fa-icon [icon]="faCopyright"></fa-icon>All Rights Reserved.</p>
     </div>
     <div class="contact">
