--- a/blogUser/src/app/PAGES/footer/footer.component.css
+++ b/blogUser/src/app/PAGES/footer/footer.component.css
@@ -14,11 +14,16 @@ h2 {
     font-weight: 700;
 }
 
+.copyright {
+    padding-top: 3px;
+}
+
 .contact {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    padding-top: 3px;
 }
 
 fa-icon {
