--- a/blogUser/src/app/PAGES/navbar/navbar.component.css
+++ b/blogUser/src/app/PAGES/navbar/navbar.component.css
@@ -57,7 +57,8 @@
     width: 100%;
     padding-left: 30px;
     position: absolute;
-    padding-block: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     /* background: rgb(61, 2, 61); */
     background: rgb(3, 26, 95);
     color: white;
@@ -84,7 +85,8 @@
 }
 
 .links-shown p {
-    padding-block: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     font-weight: 500;
     width: auto;
 }
